[metadata]
name = pylineclip
version = 1.0.0
description = Line clipping: Cohen-Sutherland
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
url = https://github.com/scivision/lineclipping-python-fortran
keywords =
  line clipping
  cohen-sutherland
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Scientific/Engineering :: Visualization
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.5
include_package_data = True
zip_safe = False
packages = find:
scripts =
  DemoLineclip.py
install_requires =

[options.extras_require]
tests =
  pytest
lint =
  flake8
  mypy
